--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <img src="北京BITR.png" alt="BITR工作室Logo" class="logo">
+            <img src="./北京BITR.png" alt="BITR工作室Logo" class="logo">
             <h1>BITR工作室</h1>
             <p>创新科技，引领未来</p>
             <nav class="nav-menu">
@@ -380,7 +380,7 @@
                         <div class="about-text">
                             <p>BITR工作室是一家专注于创新科技解决方案的团队。我们致力于为客户提供最优质的技术服务，帮助他们在数字化时代保持竞争力。</p>
                         </div>
-                        <img src="BITR海报2.png" alt="BITR工作室海报" class="about-image">
+                        <img src="./BITR海报2.png" alt="BITR工作室海报" class="about-image">
                     </div>
                 </div>
             </div>
@@ -407,15 +407,15 @@
                         <p class="partner-tip">👆 将鼠标悬停在logo上，查看彩色效果</p>
                         <div class="partner-logos">
                             <div class="partner-item">
-                                <img src="小米logo.jpg" alt="小米" class="partner-logo">
+                                <img src="./小米logo.jpg" alt="小米" class="partner-logo">
                                 <p class="partner-desc">小米科技 - 全球领先的智能硬件和电子产品制造商</p>
                             </div>
                             <div class="partner-item">
-                                <img src="特斯拉logo.jpeg" alt="特斯拉" class="partner-logo">
+                                <img src="./特斯拉logo.jpeg" alt="特斯拉" class="partner-logo">
                                 <p class="partner-desc">特斯拉 - 电动汽车和清洁能源领域的创新领导者</p>
                             </div>
                             <div class="partner-item">
-                                <img src="北京BITR.png" alt="北京BITR" class="partner-logo">
+                                <img src="./北京BITR.png" alt="北京BITR" class="partner-logo">
                                 <p class="partner-desc">北京BITR - 我们的战略合作伙伴，共同推动技术创新</p>
                             </div>
                             <div class="partner-item">
@@ -435,7 +435,7 @@
                                 <p class="partner-desc">AWS - 全球最大的云计算服务平台</p>
                             </div>
                             <div class="partner-item">
-                                <img src="1.jpeg" alt="Intel" class="partner-logo">
+                                <img src="./1.jpeg" alt="Intel" class="partner-logo">
                                 <p class="partner-desc">Intel - 全球领先的半导体和计算技术创新者</p>
                             </div>
                         </div>
