--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <img src="img/北京BITR.png" alt="BITR工作室Logo" class="logo">
+            <img src="./img/北京BITR.png" alt="BITR工作室Logo" class="logo">
             <h1>BITR工作室</h1>
             <p>创新科技，引领未来</p>
             <nav class="nav-menu">
@@ -380,7 +380,7 @@
                         <div class="about-text">
                             <p>BITR工作室是一家专注于创新科技解决方案的团队。我们致力于为客户提供最优质的技术服务，帮助他们在数字化时代保持竞争力。</p>
                         </div>
-                        <img src="img/BITR海报2.png" alt="BITR工作室海报" class="about-image">
+                        <img src="./img/BITR海报2.png" alt="BITR工作室海报" class="about-image">
                     </div>
                 </div>
             </div>
@@ -510,11 +510,11 @@
                         <p class="partner-tip">👆 将鼠标悬停在logo上，查看彩色效果</p>
                         <div class="partner-logos">
                             <div class="partner-item">
-                                <img src="img/北京BITR.png" alt="北京BITR网络开发技术小组" class="partner-logo">
+                                <img src="./img/北京BITR.png" alt="北京BITR网络开发技术小组" class="partner-logo">
                                 <p class="partner-desc">北京BITR网络开发技术小组 - 专注于网络技术创新的专业团队</p>
                             </div>
                             <div class="partner-item">
-                                <img src="img/北京BITR.png" alt="北京BITR联合技术团队" class="partner-logo">
+                                <img src="./img/北京BITR.png" alt="北京BITR联合技术团队" class="partner-logo">
                                 <p class="partner-desc">北京BITR联合技术团队 - 跨领域技术创新的战略合作伙伴</p>
                             </div>
                             <div class="partner-item">
@@ -534,7 +534,7 @@
                                 <p class="partner-desc">AWS - 全球最大的云计算服务平台</p>
                             </div>
                             <div class="partner-item">
-                                <img src="img/1.jpeg" alt="Intel" class="partner-logo">
+                                <img src="./img/1.jpeg" alt="Intel" class="partner-logo">
                                 <p class="partner-desc">Intel - 全球领先的半导体和计算技术创新者</p>
                             </div>
                         </div>
